--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -4,6 +4,7 @@
 .link {
   text-decoration: none;
   // color: currentColor;
+  // text-decoration-color: currentColor;
 }
 .invisible {
   position: absolute;
