--- a/sass/_0header.scss
+++ b/sass/_0header.scss
@@ -1,7 +1,11 @@
-// .navigation {
-//   display: flex;
-//   align-items: center;
-// }
+.nav {
+    min-height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+    
+    // outline: 1px solid teal;
+}
 // .header::after {
 //   content: "";
 //   width: 1600px;
@@ -11,85 +15,20 @@
 //   margin: 0 auto auto;
 // }
 .header .container {
-    height: 60px;
-//   display: flex;
-//   align-items: center;
-//   padding: 25px 0 24px;
-}
-.header .logo{
-    display: block;
-    padding-top: 16px;
-}
-// .site-nav {
-//   display: flex;
-//   align-items: center;
-//   margin-left: 93px;
-//   min-width: 294px;
-//   justify-content: space-between;
-// }
-// .site-nav .link {
-//   padding: 31px 0;
-//   position: relative;
+    position: relative;
+  height: 60px;
+    // display: table-cell;
+    // vertical-align: middle;
 
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--title-text-color);
-//   transition: color var(--t-cubic);
-// }
-// .link.is-current {
-//   color: var(--accent-color);
-// }
-// .link.is-current::after {
-//   content: "";
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-
+    // display: flex;
+    // align-items: center;
+    //padding: 25px 0 24px;
+    // outline: 1px solid red;
+    border-bottom: 1px solid  #ececec;
+}
+    .header .logo {
 //   display: block;
-//   width: 100%;
-//   height: 4px;
-//   border-radius: 2px;
-//   background-color: var(--accent-color);
-// }
-// .email,.phone {
-//   display: flex;  
-//   align-items: center;
-
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: calc(16/14);
-//   letter-spacing: 0.02em;
-//   color: var(--primary-text-color);
-  
-//   transition: color var(--t-cubic);
-// }
-// .envelope,.smartphone {
-//   margin-right: 10px;
-
-//   fill: var(--primary-text-color);
-  
-//   transition: fill var(--t-cubic);
-// }
-// .header .email {
-//   margin-right: 50px;
-// }
-// .header address {
-//   display: flex;
-//   margin-left: auto;
-// }
-// .site-nav .link:hover,
-// .site-nav .link:focus,
-// .email:hover,
-// .email:focus,
-// .phone:hover,
-// .phone:focus,
-// .map-address:hover,
-// .map-address:focus {
-//   color: var(--accent-color);
-// }
-// .email:hover .envelope,
-// .phone:hover .smartphone{
-//   fill: var(--accent-color);
-// }
+  // padding-top: 16px;
+  // margin-top: 16px;
+//   outline: 1px solid black;
+}
