--- a/sass/_6footer.scss
+++ b/sass/_6footer.scss
@@ -1,9 +1,12 @@
 .footer {
   padding: 60px 0;
   background-color: #2f303a;
+  width: 480px;
+      // width: 100%;
 }
 .footer .container {
   // display: flex;
+    // width: 100%;
 }
 .footer-logo{
   // display: block;
