--- a/sass/_presets.scss
+++ b/sass/_presets.scss
@@ -49,10 +49,8 @@ address {
 .clients-header,
 .team-header{
   font-weight: bold;
-  font-size: 28px;
-  // 36px;
-  line-height: calc(33/28);
-  // 1.17;
+  font-size: 28px;          // 36px;
+  line-height: calc(33/28); // 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
