--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 // @import "./3directions";
 @import "./4team";
 @import "./5clients";
-@import "./6footer";
+@import "./footer";
 @import "./portfolio";
 @import "./backdrop_modal";
 @import "./form";
