--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ address {
 .hero {
   height: 400px;
   width: 480px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/img.jpg);
   background-repeat: no-repeat;
 }
 
@@ -290,6 +290,13 @@ address {
   .hero {
     width: 768px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/img.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    width: 1600px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/img.jpg);
   }
 }
 
@@ -310,6 +317,33 @@ address {
 
 .vertu {
   padding: 60px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .vertu-list {
+    margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
+    outline: 1px solid black;
+  }
+}
+
+.vertu-item {
+  outline: 1px solid violet;
+}
+
+@media screen and (min-width: 768px) {
+  .vertu-item {
+    margin: 15px;
+    width: calc((100% - 2 * 2 * 15px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .vertu-item {
+    margin: 15px;
+    width: calc((100% - 4 * 2 * 15px) / 4);
+  }
 }
 
 .vertu-header {
@@ -338,23 +372,73 @@ address {
   height: 70px;
 }
 
+@media screen and (min-width: 768px) {
+  .vertu .icon {
+    margin-left: 142px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .vertu .icon {
+    margin-left: 100px;
+  }
+}
+
 .icon-place {
-  /* display: block; */
   background-color: #f5f4fa;
 }
 
 .team {
-  width: 480px;
   background-color: #f5f4fa;
   padding: 60px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .team {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    width: 1600px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
+    outline: 1px solid black;
+  }
+}
+
+.team-header {
+  padding-bottom: 30px;
+}
+
 .team-item {
+  outline: 1px solid violet;
   margin-top: 30px;
   padding-bottom: 24px;
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-item {
+    margin: 15px;
+    width: calc((100% - 2 * 2 * 15px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item {
+    margin: 15px;
+    width: calc((100% - 4 * 2 * 15px) / 4);
+  }
 }
 
 .team-name {
@@ -417,6 +501,12 @@ address {
 .soc-list-link:focus .soc-icon {
   fill: #fff;
   transition: fill var(--t-cubic);
+}
+
+@media screen and (min-width: 1200px) {
+  .team img {
+    width: 270px;
+  }
 }
 
 :root {
@@ -497,18 +587,53 @@ address {
   width: 480px;
 }
 
-.footer-logo {
-  text-align: center;
+@media screen and (min-width: 768px) {
+  .footer {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    width: 1600px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-tablet {
+    display: flex;
+    justify-content: space-between;
+    outline: 1px solid white;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-logo {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-logo {
+    margin-left: 100px;
+  }
 }
 
 .footer address {
   margin-top: 20px;
-  text-align: center;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: calc(24/14);
-  letter-spacing: 0.03em;
-  color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .footer address {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer address {
+    margin-left: calc(76px - 15px);
+    display: flex;
+  }
 }
 
 .map-address {
@@ -525,9 +650,19 @@ address {
   color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .address-item {
+    text-align: center;
+  }
+}
+
 .address-item .email,
 .address-item .phone {
   display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: calc(24/14);
+  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   margin-top: 8px;
 }
@@ -536,6 +671,13 @@ address {
 .join-box {
   margin-top: 60px;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .join-box {
+    margin-top: 5px;
+    margin-right: calc(89px - 15px);
+  }
 }
 
 .join-header,
@@ -572,8 +714,14 @@ address {
   flex-direction: column;
 }
 
+@media screen and (min-width: 768px) {
+  .subscribe-email {
+    margin-left: calc(166px - 15px);
+    margin-right: calc(152px - 15px);
+  }
+}
+
 .subscribe input {
-  width: 96%;
   height: 50px;
   padding-left: 16px;
   background-color: #2f303a;
