--- a/sass/_1hero.scss
+++ b/sass/_1hero.scss
@@ -6,7 +6,7 @@
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
-    url(../images/img.jpg);
+    url(../images/mobile/img.jpg);
   background-repeat: no-repeat;
   // background-size: cover;
   // padding: 200px 0 200px;
@@ -17,7 +17,14 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
     url(../images/tablet/img.jpg);
+  }
 
+  @media screen and (min-width: 1200px){
+    width: 1600px;
+    background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)),
+    url(../images/desktop/img.jpg);
   }
 }
 .hero .container {
