--- a/sass/_4team.scss
+++ b/sass/_4team.scss
@@ -1,19 +1,46 @@
 .team {
-    width: 480px;
+    // width: 100%;
   background-color: #f5f4fa;
   // padding: 94px 0;
   padding: 60px 0;
+
+  @media screen and (min-width:768px){
+    width: 768px;
+  }
+
+  @media screen and (min-width:1200px){
+    width: 1600px;
+  }
 
 }
 .team-list {
   // display: flex;
   // justify-content: space-between;
+  @media screen and (min-width:768px){
+    margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
+
+    outline: 1px solid black;
+  }
 }
 .team-header {
-  // padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 .team-item {
   // width: 270px;
+
+  @media screen and (min-width:768px){
+    margin: 15px;
+    width: calc((100% - 2 * 2 * 15px) / 2);
+  }
+  @media screen and (min-width:1200px){
+    margin: 15px;
+    width: calc((100% - 4 * 2 * 15px) / 4);
+  }
+  
+  outline: 1px solid violet;
+    // width: calc((100%-2*2*15)/2);
     margin-top: 30px;
     padding-bottom: 24px;
   background-color: #fff;
@@ -88,5 +115,10 @@
   .soc-list-link:focus & {
     fill: #fff;
     transition: fill var(--t-cubic);
+  }
+}
+.team img{
+  @media screen and (min-width:1200px){
+    width: 270px;
   }
 }
