--- a/sass/0/_base.scss
+++ b/sass/0/_base.scss
@@ -1,11 +1,14 @@
+//          Base
+
 @import "./1variables";
 @import "./2presets";
 @import "./3utils";
 @import "./4components";
 
-@import "./menu_m_t";
-@import "./0header_m_t";
-// @import "./1hero_m_t";
+// @import "./menu_m_t";    //  упразднён
+
+// @import "./0header_m_t";
+// @import "./1hero_m_t";   //  упразднён
 // @import "./2vertu_m_t";
 
     // @import "./3directions";
