--- a/sass/1_mobile/_bp_640.scss
+++ b/sass/1_mobile/_bp_640.scss
@@ -1,13 +1,16 @@
-//                     Desktop styles
+//                      Mobi
 
-// @import "./4components"; упразднён
+
+
+
+
 
 @import "./menu";
 
 @import "./0header";
-// @import "./1hero";
+@import "./1hero";
 // @import "./2vertu";
-// @import "./3directions";
+    // @import "./3directions"; отсутстует в этой вёрстке
 // @import "./4team";
 // @import "./5clients";
 // @import "./footer";
@@ -16,9 +19,7 @@
 // @import "./form";
 // @import "./portfolio";
 
-
-
-
 // @import "./variables";
 // @import "./utils";
 // @import "./presets";
+// @import "./components";
