--- a/sass/2_tablet/_bp_768.scss
+++ b/sass/2_tablet/_bp_768.scss
@@ -1,9 +1,11 @@
-//                      Mobi 
+//                      Tablet
 
 @import "./menu";
 
-@import "./0header";
-// @import "./1hero";
+    //  был однажды упразднён
+@import "./0header"; 
+                        
+@import "./1hero";
 // @import "./2vertu"; 
     // @import "./3directions";
 // @import "./4team";
