--- a/sass/0/_1hero_m_t.scss
+++ b/sass/0/_1hero_m_t.scss
@@ -1,16 +1,17 @@
 //  Combo Hero M & T
 
-.hero {
-  // width: 1600px;
-  height: 400px;
-  width: 480px;
-  // margin: 0 auto 0 auto;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/mobile/img.jpg);
-  background-repeat: no-repeat;
+
+// .hero {
+//   // width: 1600px;
+//   height: 400px;
+//   width: 480px;
+//   // margin: 0 auto 0 auto;
+//   background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url(../images/mobile/img.jpg);
+//   background-repeat: no-repeat;
   // background-size: cover;
   // padding: 200px 0 200px;
 
@@ -21,29 +22,12 @@
   //     rgba(47, 48, 58, 0.4)),
   //   url(../images/desktop/img.jpg);
   // }
-}
+// }
 
-.hero .container {
-  // display: flex;
-  // align-items: center;
-  // flex-direction: column;
-  // justify-content: center;
-  // width: 100%;
-}
-.hero-title {
-  padding-top: 118px;
-  // width: 696px;
-  font-weight: 900;
-  font-size: 26px;
-  // 44px;
-  line-height: calc(42 / 26);
-  // 60/44
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.hero .button {
-  // margin-top: 30px;
-  margin: 30px auto 0 auto;
-}
+// .hero .container {
+//   // display: flex;
+//   // align-items: center;
+//   // flex-direction: column;
+//   // justify-content: center;
+//   // width: 100%;
+// }
