--- a/sass/0/_2presets.scss
+++ b/sass/0/_2presets.scss
@@ -21,33 +21,33 @@ ol {
   margin: 0;
   padding: 0;
 }
+img{
+  display: block;
+}
 address {
   font-style: normal;
 }
-.container {
-  // width: 1200px;
-  // padding: 0 15px;
-  // margin: 0 auto;
+.container {  
   padding-left: 15px;
   padding-right: 15px;
-  // margin-left: auto;
-  // margin-right: auto;
+  
 
-  // @media screen and (min-width: 508px) {
-  //   outline: 1px;
-  // }
-
-  @media screen and (min-width: 480px) {
-    // width: 767px;
-    width: 480px;
+  
+  @media screen and (min-width: 480px) {   
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 0 15px;
   }
 
   @media screen and (min-width: 768px) and(max-width: 1199px) {
-    width: 768px;
+    max-width: 768px;
+    margin: 0 auto;
+    padding: 0 15px;
+    // width: 100%;
   }
 
  @media screen and (min-width: 1200px) {
-    width: 1200px;
+  max-width: 1200px;
    }
 }
 // .direction-title,
