--- a/sass/1_mobile/_0header.scss
+++ b/sass/1_mobile/_0header.scss
@@ -2,12 +2,13 @@
 
 @media screen and (max-width: 767px) {
   .header .container {
-    // position: relative;
-    position: fixed;
+    position: relative;
+    // position: fixed;
     // z-index: 100;
     height: 60px;
 
     // border-bottom: 1px solid #ececec; // maket by
+     outline: 1px solid black;
   }
   .logo {
     font-weight: bold; // 700;
