--- a/sass/1_mobile/_1hero.scss
+++ b/sass/1_mobile/_1hero.scss
@@ -1,1 +1,57 @@
 //  Mobi Hero
+
+//  Фрамент Репина. Зачем такая сложность?
+
+// @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
+//   screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+//   screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+//   .hero {
+//     background-image: linear-gradient(
+//         rgba(25, 28, 38, 0.2),
+//         rgba(25, 28, 38, 0.2)
+//       ),
+//       url("../images/hero/bg-mobile@2x.jpg");
+//   }
+// }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .hero {
+    // width: 1600px;
+    height: 400px;
+    // width: 480px;
+    padding: 118px 0;
+    // margin-top: 60px;   //  компенсация высоты фикс.шапки
+    // margin: 0 auto 0 auto;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/mobile/img.jpg);
+    background-size: 480px 400px;
+    background-repeat: no-repeat;
+    background-position: center top;
+
+    outline: 2px solid blueviolet;
+  }
+
+  .hero-title {
+    // padding-top: 118px;
+    // width: 696px;
+    font-weight: 900;
+    font-size: 26px;
+    // 44px;
+    line-height: calc(42 / 26);
+    // 60/44
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  .hero .button {
+    // margin-top: 30px;
+    margin: 30px auto 0 auto;
+    // background-color: var(--accent-color);
+    background-color: red;
+
+  }
+}
