--- a/sass/3_desktop/_menu.scss
+++ b/sass/3_desktop/_menu.scss
@@ -7,12 +7,12 @@
   .part2{
     color: #000; //только в этом макете не 212121 
   }
-  .contacts {
-    // flex-direction: row;
-    // padding-left: 305px;
-    // margin-left: 305px;
+  // .contacts {
+  //   // flex-direction: row;
+  //   // padding-left: 305px;
+  //   // margin-left: 305px;
 
-  }
+  // }
   .menu-container {
     display: flex;
     // justify-content: space-between;
@@ -27,8 +27,8 @@
   .header .container {
     display: flex;
     align-items: center;
-    padding-top: 24px;
-    padding-bottom: 25px;
+    // padding-top: 24px;
+    // padding-bottom: 25px;
   }
 
   .site-nav {
@@ -106,13 +106,13 @@
 
     // outline: 1px solid black;
   }
-  .contacts {
+  // .contacts {
 
-    // display: none;
-    // margin-top: 21px;
+  //   // display: none;
+  //   // margin-top: 21px;
 
-    // outline: 1px solid black;
-  }
+  //   // outline: 1px solid black;
+  // }
   .email,
   .phone {
     display: flex;
